fix: p, ul, li, color contrast

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,9 +1,9 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   background: #191a22;
-  p { color: #abb6e1}
+  p { color: #b8c3f1}
   a { color: #b1e5fd }
-  ul, li { color: #b1e5fd }
+  ul, li { color: #b8c3f1 }
 }
 
 body[a="dark"] { @include dark-appearance; }
